--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-observable": "^2.0.0",
+    "redux-saga": "^1.1.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
